-
Bug
-
Resolution: Fixed
-
Not Evaluated
-
Qt Creator 17.0.2
-
None
-
cda497a34 (18.0)
This dialog shows up if Qt Creator has the QmlDesigner plugin activated.
It is, however, a QDS specific dialog and should therefore not pop up in Qt Creator.
| For Gerrit Dashboard: QTCREATORBUG-33586 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 681291,3 | QmlDesigner: Don't show FeedbackPopup in Qt Creator | 18.0 | qt-creator/qt-creator | Status: MERGED | +2 | +1 |