QmlDesigner: Don't show FeedbackPopup in Qt Creator

It is intended for Qt Design Studio.

Fixes: QTCREATORBUG-33586
Change-Id: Ib769d72a62301790002268fff75a1ed5b8d266d6
Reviewed-by: Eike Ziller <eike.ziller@qt.io>